@@ -466,6 +466,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #11805: package_data in setup.cfg should allow more than one value.
+
 - Issue #13901: Prevent test_distutils failures on OS X with --enable-shared.
 
 - Issue #13676: Handle strings with embedded zeros correctly in sqlite3.
